<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.berkin.healthmonitor.PersonActivity"
    app:theme="@style/ThemeOverlay.AppCompat.Light">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="7dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="7dp"
        android:orientation="vertical"
        android:weightSum="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1">

        <TextView
            android:id="@+id/activityLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/select_activity"
            tools:layout_editor_absoluteX="148dp"
            tools:layout_editor_absoluteY="66dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Spinner
                android:id="@+id/activitySpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:entries="@array/activities"
                android:padding="15px"
                android:prompt="@string/select_activity" />

            <TextView
                android:id="@+id/timeLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/activitySpinner"
                android:layout_alignParentEnd="false"
                android:layout_alignParentRight="false"
                android:layout_toStartOf="@+id/time"
                android:text="Time : " />

            <TextView
                android:id="@+id/time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/activitySpinner"
                android:layout_alignParentEnd="true"
                android:layout_alignWithParentIfMissing="false"
                android:layout_centerVertical="true"
                android:text="0" />

        </RelativeLayout>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10px">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:gravity="center_horizontal"
                android:text="@string/arm"
                android:textAppearance="@style/TextAppearance.AppCompat.Button" />

            <TextView
                android:id="@+id/arm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:gravity="center_horizontal"
                android:textAppearance="@style/TextAppearance.AppCompat.Button" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10px">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:gravity="center_horizontal"
                android:text="@string/brain"
                android:textAppearance="@style/TextAppearance.AppCompat.Button" />

            <TextView
                android:id="@+id/brain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:gravity="center_horizontal"
                android:textAppearance="@style/TextAppearance.AppCompat.Button" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10px">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:gravity="center_horizontal"
                android:text="@string/eye"
                android:textAppearance="@style/TextAppearance.AppCompat.Button" />

            <TextView
                android:id="@+id/eye"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:gravity="center_horizontal"
                android:textAppearance="@style/TextAppearance.AppCompat.Button" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10px">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:gravity="center_horizontal"
                android:text="@string/heart"
                android:textAppearance="@style/TextAppearance.AppCompat.Button" />

            <TextView
                android:id="@+id/heart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:gravity="center_horizontal"
                android:textAppearance="@style/TextAppearance.AppCompat.Button" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10px">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:gravity="center_horizontal"
                android:text="@string/leg"
                android:textAppearance="@style/TextAppearance.AppCompat.Button" />

            <TextView
                android:id="@+id/leg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:gravity="center_horizontal"
                android:textAppearance="@style/TextAppearance.AppCompat.Button" />

        </TableRow>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:elevation="0dp"
                android:text="Select Duration" />

            <SeekBar
                android:id="@+id/seekBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/textView2"
                android:max="50"
                android:progressTint="@android:color/holo_blue_dark"
                android:thumbTint="@android:color/holo_blue_dark" />

            <TextView
                android:id="@+id/secondLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/startButton"
                android:layout_alignWithParentIfMissing="false"
                android:layout_toStartOf="@+id/textView2"
                android:text="Second :" />

            <TextView
                android:id="@+id/second"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/startButton"
                android:layout_centerVertical="false"
                android:layout_toEndOf="@+id/secondLabel"
                android:text="0" />

            <Button
                android:id="@+id/startButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_below="@+id/seekBar"
                android:text="Start" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/eyeImg"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_alignBottom="@+id/heartImg"
                android:layout_marginRight="10dp"
                android:layout_toStartOf="@+id/heartImg"
                app:srcCompat="@drawable/eye_green" />

            <ImageView
                android:id="@+id/legImg"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_below="@+id/heartImg"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="false"
                android:layout_marginTop="3dp"
                app:srcCompat="@drawable/leg_green" />

            <ImageView
                android:id="@+id/armImg"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_alignBottom="@+id/heartImg"
                android:layout_alignWithParentIfMissing="false"
                android:layout_centerHorizontal="false"
                android:layout_centerInParent="false"
                android:layout_centerVertical="false"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@+id/heartImg"
                app:srcCompat="@drawable/arm_green" />

            <ImageView
                android:id="@+id/heartImg"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_below="@+id/brainImg"
                android:layout_centerHorizontal="true"
                android:layout_centerInParent="false"
                android:layout_marginTop="3dp"
                app:srcCompat="@drawable/heart_green" />

            <ImageView
                android:id="@+id/brainImg"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_centerHorizontal="true"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/brain_green" />
        </RelativeLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
